HelloUltraviolet/Fixtures/RejectedSource/Procedures/ExplicitReturnDefinition/Source/Main.uv
//! Rejected procedure specimen for explicit return recognition.

public procedure explicitReturnDefinitionReference() -> i32 {
    let value: i32 = 1
    value
}
